# c-linked-list

./: .gitignore  CMakeLists.txt  LinkedList.sln
.github/workflows/: cmake.yml  msbuild.yml
LinkedList/: LinkedList.vcxproj  LinkedList.vcxproj.filters  linked_list.c  linked_list.h
LinkedListTest/: LinkedListTest.vcxproj  test.cpp
